--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "analyze:clean": "rimraf stats.json",
     "preanalyze": "npm run analyze:clean",
     "analyze": "node ./internals/scripts/analyze.js",
+    "heroku-postbuild": "npm run build",
     "extract-intl": "node ./internals/scripts/extract-intl.js",
     "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
     "preinstall": "npm run npmcheckversion",
@@ -60,19 +61,14 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
-    "add-asset-html-webpack-plugin": "3.1.1",
     "chalk": "^2.4.1",
-    "compression-webpack-plugin": "2.0.0",
     "compression": "1.7.3",
     "connected-react-router": "4.5.0",
     "cross-env": "5.2.0",
-    "eslint-import-resolver-webpack": "0.10.1",
     "express": "4.16.4",
     "fontfaceobserver": "2.0.13",
     "history": "4.7.2",
     "hoist-non-react-statics": "3.0.1",
-    "html-webpack-plugin": "3.2.0",
-    "image-webpack-loader": "4.4.0",
     "immutable": "3.8.2",
     "intl": "1.2.5",
     "invariant": "2.2.4",
@@ -93,13 +89,7 @@
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
     "styled-components": "4.0.2",
-    "terser-webpack-plugin": "1.1.0",
-    "warning": "4.0.2",
-    "webpack": "4.23.1",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-middleware": "3.4.0",
-    "webpack-hot-middleware": "2.24.3 ",
-    "webpack-pwa-manifest": "3.7.1",
+    "warning": "4.0.2"
   },
   "devDependencies": {
     "@babel/cli": "7.1.2",
@@ -112,6 +102,7 @@
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
+    "add-asset-html-webpack-plugin": "3.1.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.4",
@@ -123,6 +114,7 @@
     "babel-plugin-transform-react-remove-prop-types": "0.4.19",
     "circular-dependency-plugin": "5.0.2",
     "compare-versions": "3.4.0",
+    "compression-webpack-plugin": "2.0.0",
     "coveralls": "3.0.2",
     "css-loader": "1.0.0",
     "enzyme": "3.7.0",
@@ -132,6 +124,7 @@
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "3.1.0",
+    "eslint-import-resolver-webpack": "0.10.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
@@ -139,6 +132,8 @@
     "eslint-plugin-redux-saga": "0.9.0",
     "file-loader": "2.0.0",
     "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "image-webpack-loader": "4.4.0",
     "imports-loader": "0.8.0",
     "jest-cli": "23.6.0",
     "jest-styled-components": "6.2.2",
@@ -160,7 +155,13 @@
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.5.0",
     "svg-url-loader": "2.3.2",
+    "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.2",
+    "webpack": "4.23.1",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-middleware": "3.4.0",
+    "webpack-hot-middleware": "2.24.3 ",
+    "webpack-pwa-manifest": "3.7.1",
     "whatwg-fetch": "3.0.0"
   }
-
+}
