--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-transition-group": "^1.2.1",
     "redux": "4.0.1",
     "redux-immutable": "4.0.0",
+    "redux-mock-store": "^1.5.3",
     "redux-saga": "0.16.2",
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
